domain/force-app/main/default/objects/Account/fields/Account_email__c.field-meta.xml
<CustomField>
    <fullName>Account_email__c</fullName>
    <label>Account email</label>
    <type>Email</type>
</CustomField>