domain/force-app/main/default/objects/Account/fields/email_send__c.field-meta.xml
<CustomField>
    <fullName>email_send__c</fullName>
    <formula>INCLUDES( TEst_MSecsd__c , &apos;Value A&apos;) ||
INCLUDES( TEst_MSecsd__c , &apos;Value B&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>email send</label>
    <type>Checkbox</type>
</CustomField>