domain/force-app/main/default/objects/Account/fields/Send_welcome_email__c.field-meta.xml
<CustomField>
    <fullName>Send_welcome_email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send welcome email</label>
    <type>Checkbox</type>
</CustomField>