domain/force-app/main/default/objects/Account/fields/TEst_123__c.field-meta.xml
<CustomField>
    <fullName>TEst_123__c</fullName>
    <label>TEst 123</label>
    <length>128</length>
    <type>Text</type>
</CustomField>