domain/force-app/main/default/objects/Account/fields/TEst_MSecsd__c.field-meta.xml
<CustomField>
    <fullName>TEst_MSecsd__c</fullName>
    <label>TEst MSecsd</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value A</fullName>
            </value>
            <value>
                <fullName>Value B</fullName>
            </value>
            <value>
                <fullName>Value C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>