domain/force-app/main/default/objects/Account/fields/welcome_email__c.field-meta.xml
<CustomField>
    <fullName>welcome_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>welcome email</label>
    <type>Checkbox</type>
</CustomField>