domain/force-app/main/default/objects/Account/recordTypes/Volunteer_Organization_Account.recordType-meta.xml
<RecordType>
    <fullName>Volunteer_Organization_Account</fullName>
    <active>true</active>
    <description>Account page for creating volunteer organizations</description>
    <label>Volunteer Organization Account</label>
</RecordType>